--- a/literalura/src/main/resources/application.properties
+++ b/literalura/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=literalura
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/literalura
+spring.datasource.username=postgres
+spring.datasource.password=sgm881
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+# Configuración de JPA para que genere o actualice las tablas
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
