--- a/literalura/src/main/resources/application.properties
+++ b/literalura/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=literalura
 spring.datasource.url=jdbc:postgresql://${DB_HOST}/literalura
-spring.datasource.username=postgres
-spring.datasource.password=sgm881
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
 # Configuración de JPA para que genere o actualice las tablas
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.format-sql=true
 spring.jpa.show-sql=true
 
 
